// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox components Renders CheckboxContainer properly 1`] = `
<div
  class="sc-gsDKAQ DUhMA"
>
  Test
</div>
`;

exports[`Checkbox components Renders CheckboxDiv properly 1`] = `
<div
  class="sc-bdvvtL hLVIjI"
>
  Test
</div>
`;

exports[`Checkbox components Renders TextCheckBox properly 1`] = `
<label
  class="sc-hKwDye gVnGAI"
>
  Test
</label>
`;
